src/components/App/App.css
/* ... */
.activity-pending-leftmost {
    display: flex;
    flex-direction: column;
    text-align: center;
}

.activity-pending-message {
    display: flex;
    flex-direction: column;
    align-content: flex-start;
    border-style: solid;
    border-width: 1px;
    border-color: #9e6767;
    border-radius: 4px;
    max-width: 500px;
    min-width: 500px;
    margin-left: 20px;
    padding: 20px;
    margin-right: -10px;
    margin-bottom: 20px;
}

.activity-pending-button-container {
    display: flex;
    flex-direction: column;
    padding: 10px;
    margin-right: 40px;
}

.activity-suggested-by {
    padding-top: 30px;
}

.activity-pending-accept-button {
    background-color: #f29475;
    width: 100px;
    height: 40px;
    padding-top: 3px;
    border-radius: 4px;
    font-size: 16px;
    color: #f8f8f8;
    box-shadow: 2px 2px 10px #88888848;
    font-family: 'Josefin Sans', sans-serif;
    margin: 10px;
    outline: none;
    border: none;
    cursor: pointer;
}

.activity-pending-cancel-button {
    background-color: #9e6767;
    width: 100px;
    height: 40px;
    padding-top: 3px;
    border-radius: 4px;
    font-size: 16px;
    color: #f8f8f8;
    box-shadow: 2px 2px 10px #88888848;
    font-family: 'Josefin Sans', sans-serif;
    margin: 10px;
    outline: none;
    border: none;
    cursor: pointer;
}

.activity-connected-you-with-container {
    padding: 15px;
}

tr, td {
    padding: 10px;
}

.activity-connected-status-modal {
    /* margin-top: -15px; */
    width: 100%;
    /* height: 800px; */
    display: flex;
    flex-direction: column;
    text-align: center;
}

.search-field {
    font-family: 'Josefin Sans', sans-serif;
    font-size: 14px;
    height: 35px;
    width: 300px;
    text-align: center;
    outline: none;
}

.search-avatar {
    width: 125px;
    height: 125px;
    object-fit: cover;
    border-radius: 50%;
}

.search-avatar2 {
    width: 75px;
    height: 75px;
    object-fit: cover;
    border-radius: 50%;
}

.search-page-container {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    align-items: center;
}

.search-page-background {
    background-color: #ffffff;
    box-shadow: 2px 2px 10px #88888888;
    width: 90%;
    margin: 20px auto;
    padding: 10px;
    border-radius: 4px;
    margin-top: 45px;
}

.search-head-row {
    border-bottom: solid #f29475 1.5px;
    padding-bottom: 16px;
    width: 200px;
}

td {
    max-width: 350px;
    padding: 12px;
}

.initiate-connection-container {
    text-align: center;
}
/* 
@media only screen and (max-width: 600px) {
    .profile-connected-summary-container {
        flex-direction: column;
    }
    .profile-name-email-container {
      flex-direction: column;
    }
  }

  @media
only screen and (max-width: 500px) {
  table, thead, tbody, th, td, tr {
    display: block;
  }
  thead tr {
    position: absolute;
    top: -9999px;
    left: -9999px;
  }
} */

  td:before {
    position: absolute;
    top: 12px;
    left: 6px;
    width: 200px;
    padding-right: 40px;
    white-space: nowrap;
    margin-left: -150px;
  }
  .clicked {
    background-color: white;
    width: 36px;
    height: 36px;
    padding-top: 6px;
    border: solid #f29475 1px;
    border-radius: 4px;
    font-size: 26px;
    color: #f29475;
    box-shadow: 2px 2px 10px #88888848;
    font-family: 'Josefin Sans', sans-serif;
    margin: 10px;
    outline: none;
    border: bottom;
    cursor: pointer;
}

.kickback-sent-button {
    background-color: #f29475;
    width: 100px;
    height: 40px;
    border-radius: 4px;
    font-size: 13px;
    color: #f8f8f8;
    box-shadow: 2px 2px 10px #88888848;
    font-family: 'Josefin Sans', sans-serif;
    padding-top: 4px;
    outline: none;
    border: none;
    cursor: pointer;
}

.kickback-venmo-description {
    margin-top: 100px;
}

.swal-footer {
    text-align: center;
  }

  .swal-button--confirm {
    background: #f29475;
    outline: none;
}
.swal-text {
    text-align: center;
    font-family: 'Josefin Sans', sans-serif;
    font-size: 24px;
}

